controller-public-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: controller-public
  namespace: <aap-namespace> # Make sure this is your correct namespace
  annotations:
    haproxy.router.openshift.io/rate-limit-connections: "true"   # Enableds rate limiting
    haproxy.router.openshift.io/rate-limit-connections.rate-http: "10"   # Your desired public rate limit
    haproxy.router.openshift.io/rate-limit-connections.concurrent-tcp: "5" # Your desired public concurrent limit
spec:
  host: public-controller.apps.openshift.example.com # Your unique public hostname
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: <controller-service-name> # Add your service name for Controller here.
    weight: 100
  wildcardPolicy: None
